[package]
name = "kwavers-field"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Numerical field definitions for kwavers: component indices (SSOT), field-type mapping, operations/statistics, and bubble/electromagnetic field states"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-math = { path = "../kwavers-math" }
leto = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }

[lints]
workspace = true
