[package]
name = "kwavers-gpu"
version = "3.0.0"
edition = "2021"
description = "wgpu-backed compute backend for kwavers: concrete ComputeBackend / FdtdGpuAccelerator implementations and WGSL kernels"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
# Layered kwavers crates. kwavers-gpu is a leaf above solver: it implements the
# ComputeBackend / FdtdGpuAccelerator trait surfaces that live in kwavers-solver,
# so the wgpu/WGSL concretions never sit in the algorithm crates (DIP).
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-domain = { path = "../kwavers-domain" }
kwavers-solver = { path = "../kwavers-solver" }

ndarray = { workspace = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }
log = "0.4"

# GPU stack — optional, pulled in by the `gpu` feature. The GPU code paths are
# currently being repaired against wgpu v26; until that lands they are gated so
# the default workspace build (GPU off) stays green ("gate what is not complete").
wgpu = { version = "26.0", features = ["wgsl"], optional = true }
pollster = { version = "0.4", optional = true }
apollofft-wgpu = { workspace = true, optional = true }
burn = { version = "0.19", features = ["ndarray", "autodiff", "wgpu"], optional = true }

[features]
default = []
# Concrete wgpu backend. Enables the WGSL kernels and ComputeBackend/
# FdtdGpuAccelerator implementations. Mirrors the prior facade `gpu` feature.
gpu = [
    "dep:wgpu",
    "dep:bytemuck",
    "dep:pollster",
    "dep:apollofft-wgpu",
    "kwavers-core/gpu",
    "kwavers-math/gpu",
    "kwavers-solver/gpu",
]
# Burn-backed GPU accelerator (PINN residual kernels). Additive on top of `gpu`.
pinn = ["gpu", "dep:burn"]

[dev-dependencies]
kwavers-domain = { path = "../kwavers-domain", features = ["test-util"] }
