[package]
name = "kwavers-gpu"
version = "5.0.0"
edition = "2021"
description = "Hephaestus-backed provider-generic GPU compute backend for kwavers"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
# Layered kwavers crates. kwavers-gpu is a leaf above solver: it implements the
# ComputeBackend / FdtdGpuAccelerator trait surfaces that live in kwavers-solver,
# so concrete WGPU/WGSL or CUDA kernels never sit in the algorithm crates.
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-physics = { path = "../kwavers-physics" }
kwavers-solver = { path = "../kwavers-solver" }
kwavers-analysis = { path = "../kwavers-analysis", features = ["gpu"], optional = true }

leto = { workspace = true }
tracing = { workspace = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }
log = "0.4"

# GPU stack - optional, pulled in by the `gpu` feature. The implemented provider
# is WGPU because current production kernels are WGSL; CUDA belongs behind the
# same Hephaestus provider traits when real CUDA kernels are added.
wgpu = { version = "30.0.0", default-features = false, features = ["wgsl", "vulkan", "metal"], optional = true }
pollster = { version = "0.4", optional = true }
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }
hephaestus-cuda = { workspace = true, optional = true }
moirai-parallel = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
once_cell = { version = "1.19", optional = true }
flume = { version = "0.11", optional = true }

[features]
default = []
# Provider-generic GPU backend feature. Enables the current WGPU/WGSL provider
# and the ComputeBackend/FdtdGpuAccelerator implementations.
gpu = [
    "dep:wgpu",
    "dep:bytemuck",
    "dep:pollster",
    "dep:hephaestus-core",
    "dep:hephaestus-wgpu",
    "dep:kwavers-analysis",
    "dep:moirai-parallel",
    "dep:rand",
    "dep:once_cell",
    "dep:flume",
    "kwavers-math/gpu",
    "kwavers-solver/gpu",
]
# Compile Kwavers' Hephaestus CUDA acquisition contract. This does not expose a
# CUDA compute backend until the operation kernels are implemented.
cuda-provider = ["gpu", "dep:hephaestus-cuda"]
# Enable Hephaestus' real CUDA runtime loading for provider acquisition.
cuda-runtime = ["cuda-provider", "hephaestus-cuda/cuda"]

[dev-dependencies]
eunomia = { workspace = true }
kwavers-solver = { path = "../kwavers-solver", features = ["test-util"] }
