[package]
name = "kwavers-grid"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Spatial discretization for kwavers: Cartesian/cylindrical grids, coordinates, topology, operators, k-space FFT utilities, and geometric domains"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
aequitas = { workspace = true }
eunomia = { workspace = true }
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
moirai-parallel = { workspace = true }
leto = { workspace = true }
tyche-core = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]
proptest = "1.2"
stats_alloc = { workspace = true }

[lints]
workspace = true
