[package]
name = "kwavers-math"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Mathematical primitives for kwavers: FFT, linear algebra, numerics, geometry, statistics, SIMD"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
num-complex = { workspace = true }
kwavers-core = { path = "../kwavers-core" }
moirai-parallel = { workspace = true }
hermes-simd = { workspace = true }
ndarray = { version = "0.16", features = ["serde"] }
leto = { workspace = true, features = ["ndarray-compat"] }
leto-ops = { workspace = true }
num-traits = "0.2" # Phase-1A pilot ported numeric_ops.rs only; full kwavers-math sweep lands in Phase-1B once eunomia exposes a non-sealed Scalar trait usable for num_complex::Complex<f64> (csr.rs blocker).
eunomia = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
apollo = { workspace = true }

[features]
gpu = ["apollo/wgpu"]

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
