[package]
name = "kwavers-math"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Mathematical primitives for kwavers: FFT, linear algebra, numerics, geometry, statistics, SIMD"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
# Required for linear algebra bridge (ndarray↔leto conversions)
ndarray = { workspace = true }
num-complex = { workspace = true }
kwavers-core = { path = "../kwavers-core" }
moirai-parallel = { workspace = true }
hermes-simd = { workspace = true }
leto = { workspace = true, features = ["std"] }
leto-ops = { workspace = true }
eunomia = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
apollo = { workspace = true }

[features]
gpu = ["apollo/wgpu"]

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
