[package]
name = "kwavers-math"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Mathematical primitives for kwavers: FFT, linear algebra, numerics, geometry, statistics, SIMD"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
moirai-parallel = { workspace = true }
hermes-simd = { workspace = true }
leto = { workspace = true, features = ["std"] }
leto-ops = { workspace = true }
eunomia = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
apollo = { workspace = true }
hephaestus-core = { workspace = true, optional = true }
hephaestus-wgpu = { workspace = true, optional = true }

[features]
gpu = ["apollo/wgpu", "dep:hephaestus-core", "dep:hephaestus-wgpu"]

[dev-dependencies]

[lints]
workspace = true
