[package]
name = "kwavers-mesh"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Tetrahedral mesh infrastructure for kwavers FEM: nodes, connectivity, statistics, quality metrics, gaia bridge"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-grid = { path = "../kwavers-grid" }
leto = { workspace = true }
gaia = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }

[lints]
workspace = true
