[package]
name = "kwavers-phantom"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Clinical tissue-phantom builders for kwavers: blood-oxygenation, layered tissue, tumor, vascular network presets"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-optics = { path = "../kwavers-optics" }

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
