[package]
name = "kwavers-physics"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Physics for kwavers: nonlinear acoustics, bubble dynamics, thermal, optics, chemistry, elastic waves"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
aequitas = { workspace = true }
consus-npy = { workspace = true }
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging", optional = true }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
apollo = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
leto = { workspace = true }
moirai-parallel = { workspace = true }
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
anyhow = "1.0"
ritk-registration = { workspace = true, optional = true }
eunomia = { workspace = true }

[features]
clinical-imaging = [
    "dep:kwavers-imaging",
    "dep:ritk-registration",
    "kwavers-core/registration",
]

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
