[package]
name = "kwavers-receiver"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Low-level acoustic recording primitives for kwavers: sensor-array geometry, field recorders, point sensors, grid sampling, sonoluminescence detection"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
moirai-parallel = { workspace = true }
leto = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

[dev-dependencies]
eunomia = { workspace = true }

[lints]
workspace = true
