[package]
name = "kwavers-simulation"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Simulation orchestration for kwavers: builders, runners, multi-physics coupling, modality pipelines, backends"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-mesh = { path = "../kwavers-mesh" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-physics = { path = "../kwavers-physics", features = ["clinical-imaging"] }
kwavers-solver = { path = "../kwavers-solver", features = ["clinical-imaging"] }
leto = { workspace = true }
# Concrete GPU backend (the GPU-PSTD adapter routes through it). Optional —
# only pulled by the `gpu` feature.
kwavers-gpu = { path = "../kwavers-gpu", optional = true }
moirai-parallel = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"

[features]
gpu = ["dep:kwavers-gpu", "kwavers-gpu/gpu", "kwavers-math/gpu", "kwavers-solver/gpu"]


[dev-dependencies]
eunomia = { workspace = true }

[lints]
workspace = true
