[package]
name = "kwavers-solver"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Forward and inverse solvers for kwavers: FDTD/PSTD/k-space/Helmholtz, BEM, FWI/RTM/CBS, PINN"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
aequitas = { workspace = true }
hyperion = { workspace = true }

kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging", optional = true }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-receiver = { path = "../kwavers-receiver" }
kwavers-source = { path = "../kwavers-source" }
kwavers-boundary = { path = "../kwavers-boundary" }
kwavers-mesh = { path = "../kwavers-mesh" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-field = { path = "../kwavers-field" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-physics = { path = "../kwavers-physics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
log = "0.4"
leto = { workspace = true }
leto-ops = { workspace = true }
moirai-parallel = { workspace = true }

rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0"
bitflags = "2.4"
parking_lot = "0.12"
tracing = { version = "0.1", features = ["attributes"] }
apollo = { workspace = true }
eunomia = { workspace = true }
tyche-core = { workspace = true }

# coeus ML stack — required only when the `pinn` feature is enabled.
coeus-core = { workspace = true, optional = true }
coeus-tensor = { workspace = true, optional = true }
coeus-autograd = { workspace = true, optional = true }
coeus-nn = { workspace = true, optional = true }
coeus-optim = { workspace = true, optional = true }
coeus-ops = { workspace = true, optional = true }

# Typed errors for the PINN training/distributed subsystem.
thiserror = { workspace = true }

[features]
# Exposes `plugin::test_support` (NullBoundary + context helpers) for downstream
# crates' tests.
test-util = []
gpu = ["kwavers-math/gpu"]
pinn = [
    "dep:coeus-core",
    "dep:coeus-tensor",
    "dep:coeus-autograd",
    "dep:coeus-nn",
    "dep:coeus-optim",
    "dep:coeus-ops",
]
async-runtime = []
clinical-imaging = ["dep:kwavers-imaging", "kwavers-physics/clinical-imaging"]
# Nightly-only code paths (portable `std::simd`); WIP, off by default.
nightly = []
# SIMD-accelerated PINN inference (WIP, nightly-only — implies `nightly` so the
# engine and `SimdExecutor` cfg-gates activate together).
simd = ["nightly"]

[[example]]
name = "elastic_shear_fwi_lesion"
required-features = ["clinical-imaging"]

[dev-dependencies]
stats_alloc = { workspace = true }

[[test]]
name = "collocation_allocation"
path = "tests/collocation_allocation.rs"
required-features = ["pinn"]

[lints]
workspace = true
