[package]
name = "kwavers-therapy"
version = "3.0.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "Clinical therapy + care-delivery for kwavers: HIFU/histotripsy/lithotripsy planning, theranostic guidance, dose & safety monitoring, regulatory, patient management"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-imaging = { path = "../kwavers-imaging" }
kwavers-transducer = { path = "../kwavers-transducer" }
kwavers-source = { path = "../kwavers-source" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-physics = { path = "../kwavers-physics" }
kwavers-solver = { path = "../kwavers-solver" }
kwavers-analysis = { path = "../kwavers-analysis" }
kwavers-simulation = { path = "../kwavers-simulation" }
moirai-parallel = { workspace = true }
leto = { workspace = true }
leto-ops = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = { workspace = true }

[features]
nifti = ["kwavers-core/nifti"]

[dev-dependencies]
approx = "0.5"

[lints]
workspace = true
