[package]
name = "kwavers-transducer"
version = "4.1.0"
edition = "2021"
authors = ["Ryan Clanton PhD <ryanclanton@outlook.com>"]
description = "High-level transducer devices for kwavers: focused bowls, phased/linear/matrix/2-D/hemispherical arrays, k-Wave arrays, calibration, factories, beamforming, PAM, ultrafast"
license = "MIT"
repository = "https://github.com/ryancinsight/kwavers"

[dependencies]
kwavers-core = { path = "../kwavers-core" }
kwavers-math = { path = "../kwavers-math" }
eunomia = { workspace = true }
kwavers-grid = { path = "../kwavers-grid" }
kwavers-signal = { path = "../kwavers-signal" }
kwavers-field = { path = "../kwavers-field" }
kwavers-medium = { path = "../kwavers-medium" }
kwavers-source = { path = "../kwavers-source" }
kwavers-receiver = { path = "../kwavers-receiver" }
leto = { workspace = true }
leto-ops = { workspace = true }
moirai-parallel = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[dev-dependencies]

[lints]
workspace = true
